# raspberrypi-1-rust

./: Cargo.toml  LICENSE.md  Makefile  README.md  build.rs  linker.ld  rpi.json
.cargo/: config.toml
src/: bases.rs  console.rs  main.rs
src/bootcode/: bootcode.s  mod.rs
src/drivers/: mod.rs  serial.rs  video.rs
src/drivers/video/: buffer.rs  mail.rs  mailbox.rs  painter.rs  pixel.rs  structs.rs
src/utils/: mod.rs
