[package]
name = "rpi-video"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rpi-video"
test = false
benchmark = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
